--- a/acerca-de.html
+++ b/acerca-de.html
@@ -17,11 +17,30 @@
   <header>
     <nav class="navbar">
       <div class="navbar-izquierda">
-        <a href="index.html"><img src="../img/logo-3.png" alt="Logo" class="logo"></a>
+        <a href="#"><img src="../img/logo-3.png" alt="Logo" class="logo"></a>
+      </div>
+
+      <input type="checkbox" id="menu-toggle">
+      <label for="menu-toggle" class="menu-icon">
+        <i class="fas fa-bars"></i>
+      </label>
+
+      <div class="fullscreen-menu">
+        <ul class="fullscreen-menu-links">
+          <li><a href="acerca-de.html">ACERCA DE</a></li>
+          <li><a href="nuestras-peliculas.html">NUESTRAS PELICULAS</a></li>
+          <li><a href="novedades.html">NOVEDADES</a></li>
+          <li><a href="contacto.html">CONTACTO</a></li>
+          <li><a href="ingresar.html">INGRESAR</a></li>
+          <li><a href="carrito.html"><i class="fas fa-shopping-cart"></i></a></li>
+        </ul>
+
+        <input type="checkbox" id="menu-toggle">
+        <label for="menu-toggle" class="btn btn-danger cerrar-menu">CERRAR MENU</label>
       </div>
 
       <ul class="nav-derecha">
-        <li><a href="#">ACERCA DE</a></li>
+        <li><a href="acerca-de.html">ACERCA DE</a></li>
         <li><a href="nuestras-peliculas.html">NUESTRAS PELICULAS</a></li>
         <li><a href="novedades.html">NOVEDADES</a></li>
         <li><a href="contacto.html">CONTACTO</a></li>
