--- a/carrito.html
+++ b/carrito.html
@@ -17,7 +17,7 @@
   <header>
     <nav class="navbar">
       <div class="navbar-izquierda">
-        <a href="#"><img src="../img/logo-3.png" alt="Logo" class="logo"></a>
+        <a href="index.html"><img src="../img/logo-3.png" alt="Logo" class="logo"></a>
       </div>
 
       <input type="checkbox" id="menu-toggle">
@@ -32,7 +32,7 @@
           <li><a href="novedades.html">NOVEDADES</a></li>
           <li><a href="contacto.html">CONTACTO</a></li>
           <li><a href="ingresar.html">INGRESAR</a></li>
-          <li><a href="carrito.html"><i class="fas fa-shopping-cart"></i></a></li>
+          <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
         </ul>
 
         <input type="checkbox" id="menu-toggle">
@@ -45,7 +45,7 @@
         <li><a href="novedades.html">NOVEDADES</a></li>
         <li><a href="contacto.html">CONTACTO</a></li>
         <li><a href="ingresar.html">INGRESAR</a></li>
-        <li><a href="carrito.html"><i class="fas fa-shopping-cart"></i></a></li>
+        <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
       </ul>
     </nav>
   </header>
