--- a/contacto.html
+++ b/contacto.html
@@ -17,7 +17,7 @@
   <header>
     <nav class="navbar">
       <div class="navbar-izquierda">
-        <a href="#"><img src="../img/logo-3.png" alt="Logo" class="logo"></a>
+        <a href="index.html"><img src="../img/logo-3.png" alt="Logo" class="logo"></a>
       </div>
 
       <input type="checkbox" id="menu-toggle">
@@ -30,7 +30,7 @@
           <li><a href="acerca-de.html">ACERCA DE</a></li>
           <li><a href="nuestras-peliculas.html">NUESTRAS PELICULAS</a></li>
           <li><a href="novedades.html">NOVEDADES</a></li>
-          <li><a href="contacto.html">CONTACTO</a></li>
+          <li><a href="#">CONTACTO</a></li>
           <li><a href="ingresar.html">INGRESAR</a></li>
           <li><a href="carrito.html"><i class="fas fa-shopping-cart"></i></a></li>
         </ul>
@@ -43,7 +43,7 @@
         <li><a href="acerca-de.html">ACERCA DE</a></li>
         <li><a href="nuestras-peliculas.html">NUESTRAS PELICULAS</a></li>
         <li><a href="novedades.html">NOVEDADES</a></li>
-        <li><a href="contacto.html">CONTACTO</a></li>
+        <li><a href="#">CONTACTO</a></li>
         <li><a href="ingresar.html">INGRESAR</a></li>
         <li><a href="carrito.html"><i class="fas fa-shopping-cart"></i></a></li>
       </ul>
