--- a/novedades.html
+++ b/novedades.html
@@ -17,7 +17,7 @@
   <header>
     <nav class="navbar">
       <div class="navbar-izquierda">
-        <a href="#"><img src="../img/logo-3.png" alt="Logo" class="logo"></a>
+        <a href="index.html"><img src="../img/logo-3.png" alt="Logo" class="logo"></a>
       </div>
 
       <input type="checkbox" id="menu-toggle">
@@ -29,7 +29,7 @@
         <ul class="fullscreen-menu-links">
           <li><a href="acerca-de.html">ACERCA DE</a></li>
           <li><a href="nuestras-peliculas.html">NUESTRAS PELICULAS</a></li>
-          <li><a href="novedades.html">NOVEDADES</a></li>
+          <li><a href="#">NOVEDADES</a></li>
           <li><a href="contacto.html">CONTACTO</a></li>
           <li><a href="ingresar.html">INGRESAR</a></li>
           <li><a href="carrito.html"><i class="fas fa-shopping-cart"></i></a></li>
@@ -42,7 +42,7 @@
       <ul class="nav-derecha">
         <li><a href="acerca-de.html">ACERCA DE</a></li>
         <li><a href="nuestras-peliculas.html">NUESTRAS PELICULAS</a></li>
-        <li><a href="novedades.html">NOVEDADES</a></li>
+        <li><a href="#">NOVEDADES</a></li>
         <li><a href="contacto.html">CONTACTO</a></li>
         <li><a href="ingresar.html">INGRESAR</a></li>
         <li><a href="carrito.html"><i class="fas fa-shopping-cart"></i></a></li>
