--- a/novedades.html
+++ b/novedades.html
@@ -95,30 +95,30 @@
               <p>No hay comentarios. ¡Sé el primero!</p>
             </div>
     
-            <div class="other-news mt-5">
+            <div class="otros-articulos mt-5">
               <h3 class="text-center">Otros Artículos:</h3>
               <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
                   <div class="card">
-                    <img src="imagen1.jpg" class="card-img-top" alt="Imagen">
+                    <img src="/img/novedades/strangerschapter1.jpg" class="card-img-top" alt="Imagen">
                     <div class="card-body">
-                      <h5 class="card-title">Título</h5>
+                      <h5 class="card-title">"Strangers: Capítulo 1" ya es la película de terror más taquillera del año en USA.</h5>
                     </div>
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
                   <div class="card">
-                    <img src="imagen2.jpg" class="card-img-top" alt="Imagen">
+                    <img src="img/novedades/MALIGNO-caratula.jpg" class="card-img-top" alt="Imagen">
                     <div class="card-body">
-                      <h5 class="card-title">Título</h5>
+                      <h5 class="card-title">‘Maligno’, la película más desconocida del creador de ‘Saw’ y ‘Expediente Warren’.</h5>
                     </div>
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
                   <div class="card">
-                    <img src="imagen3.jpg" class="card-img-top" alt="Imagen">
+                    <img src="img/novedades/alien-romulus-poster.png" class="card-img-top" alt="Imagen">
                     <div class="card-body">
-                      <h5 class="card-title">Título</h5>
+                      <h5 class="card-title">El nuevo tráiler de ‘Alien Romulus’ provoca taquicardias y promete devolver la gloria a la saga.</h5>
                     </div>
                   </div>
                 </div>
