--- a/ingresar.html
+++ b/ingresar.html
@@ -56,8 +56,41 @@
     </a>
 
     <section>
-        <p>hola hola</p>
+      <div class="banner">
+        <h2>INGRESAR</h2>
+      </div>
     </section>
+
+    <section>
+      <div class="main-ingresar">
+        <div class="login-registro">
+          <div class="login">
+            <h3>Ingresa a tu cuenta</h3>
+            <label for="username">USUARIO</label>
+            <input type="text" id="username" name="username" required>
+            <label for="password">CONTRASEÑA</label>
+            <input type="password" id="password" name="password" required>
+
+            <button type="submit" class="btn btn-danger conocenos-btn">INGRESAR</button>
+            <p>
+              <a href="#">
+                <p>Olvidé mi contraseña</p>
+              </a>
+            </p>
+          </div>
+
+          <div class="registro">
+            <h3>No tenes cuenta?</h3>
+            <a href="registro.html" class="btn btn-danger">REGISTRARSE</a>
+          </div>
+        </div>
+
+        <div class="imagen-ingresar">
+          <img src="img/corridor.jpg" alt="corridor-ingreso">
+        </div>
+      </div>
+    </section>
+
   </main>
 
   <footer>
