--- a/novedades.html
+++ b/novedades.html
@@ -29,7 +29,7 @@
         <ul class="fullscreen-menu-links">
           <li><a href="acerca-de.html">ACERCA DE</a></li>
           <li><a href="nuestras-peliculas.html">NUESTRAS PELICULAS</a></li>
-          <li><a href="#">NOVEDADES</a></li>
+          <li><a href="novedades.html">NOVEDADES</a></li>
           <li><a href="contacto.html">CONTACTO</a></li>
           <li><a href="ingresar.html">INGRESAR</a></li>
           <li><a href="carrito.html"><i class="fas fa-shopping-cart"></i></a></li>
@@ -42,7 +42,7 @@
       <ul class="nav-derecha">
         <li><a href="acerca-de.html">ACERCA DE</a></li>
         <li><a href="nuestras-peliculas.html">NUESTRAS PELICULAS</a></li>
-        <li><a href="#">NOVEDADES</a></li>
+        <li><a href="novedades.html">NOVEDADES</a></li>
         <li><a href="contacto.html">CONTACTO</a></li>
         <li><a href="ingresar.html">INGRESAR</a></li>
         <li><a href="carrito.html"><i class="fas fa-shopping-cart"></i></a></li>
@@ -68,7 +68,7 @@
           <div class="article-content">
             <h4 class="text-center">Cuando acecha la maldad: la joya argentina del cine de terror llega a Netflix en junio.</h4>
             <div class="img-container text-center">
-              <img src="/img/novedades/whenevillurks.webp" class="img-fluid" alt="Cuando acecha la maldad - Demián Rugna (2023)">
+              <img src="/img/novedades/whenevillurks.webp" class="img-fluid">
               <p class="text-center mt-2">Cuando acecha la maldad - Demián Rugna (2023)</p>
             </div>
             <div class="text-container mt-4">
@@ -99,39 +99,62 @@
               <h3 class="text-center">Otros Artículos:</h3>
               <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
-                  <div class="card">
-                    <img src="/img/novedades/strangerschapter1.jpg" class="card-img-top" alt="Imagen">
-                    <div class="card-body">
-                      <h5 class="card-title">"Strangers: Capítulo 1" ya es la película de terror más taquillera del año en USA.</h5>
-                    </div>
-                  </div>
+                  <a href="/articulos/strangers.html"
+                    ><div class="card">
+                      <img
+                        src="img/novedades/strangerschapter1.jpg"
+                        class="card-img-top"
+                        alt="Imagen"
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">
+                          "Strangers: Capítulo 1" ya es la película de terror más
+                          taquillera del año en USA.
+                        </h5>
+                      </div>
+                    </div></a
+                  >
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
-                  <div class="card">
-                    <img src="img/novedades/MALIGNO-caratula.jpg" class="card-img-top" alt="Imagen">
-                    <div class="card-body">
-                      <h5 class="card-title">‘Maligno’, la película más desconocida del creador de ‘Saw’ y ‘Expediente Warren’.</h5>
+                  <a href="/articulos/maligno.html">
+                    <div class="card">
+                      <img
+                        src="img/novedades/MALIGNO-caratula.jpg"
+                        class="card-img-top"
+                        alt="Imagen"
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">
+                          ‘Maligno’, la película más desconocida del creador de
+                          ‘Saw’ y ‘Expediente Warren’.
+                        </h5>
+                      </div>
                     </div>
-                  </div>
+                  </a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
-                  <div class="card">
-                    <img src="img/novedades/alien-romulus-poster.png" class="card-img-top" alt="Imagen">
-                    <div class="card-body">
-                      <h5 class="card-title">El nuevo tráiler de ‘Alien Romulus’ provoca taquicardias y promete devolver la gloria a la saga.</h5>
+                  <a href="/articulos/alien-romulus.html"
+                    ><div class="card">
+                      <img
+                        src="img/novedades/alien-romulus-poster.png"
+                        class="card-img-top"
+                        alt="Imagen"
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">
+                          El nuevo tráiler de ‘Alien Romulus’ provoca taquicardias
+                          y promete devolver la gloria a la saga.
+                        </h5>
+                      </div>
                     </div>
-                  </div>
+                  </a>
                 </div>
               </div>
             </div>
           </div>
         </section>
       </main>
-    <footer>
-      <div>
-        <p>&copy; 2024 CinemaFusion Films</p>
-      </div>
-    </footer>
+      <footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
