--- a/contacto.html
+++ b/contacto.html
@@ -25,73 +25,63 @@
       <i class="fas fa-angle-double-up"></i>
     </a>
 
-    <section>
-      <br><br>
-      <div style="  display: flex;-wrap: wrap;">
-          <div style=" flex: 1; padding: 10px; box-sizing: border-box;">
-      <h1>Capital Federal</h1>
-      <p>Horarios de atencion : Lunes a Viernes de 10 a 18Hs</p>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.822235586908!2d-58.380524223392!3d-34.60865635776064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccad18308bb79%3A0x6ac2dbd8335ca774!2sAv.%20de%20Mayo%20811%2C%20C1084AAD%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1714323104905!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      <br>
+    <section class="custom-margin">
+      <div class="banner text-center p-3">
+        <h2>Contactanos</h2>
       </div>
-      <div style=" flex: 1; padding: 10px; box-sizing: border-box;">
-      <div class="contact_form" style="margin-left: 5rem; margin-right: 5rem; margin-bottom: 3rem; text-align: left;">
-
-          <div class="formulario">      
-              <h1>Contactanos</h1>
+      <br><br>
+      <div class="custom-flex-container">
+        <div class="custom-flex-item">
+          <h3>Capital Federal</h3>
+          <p>Horarios de atencion : Lunes a Viernes de 10 a 18Hs</p>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.822235586908!2d-58.380524223392!3d-34.60865635776064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccad18308bb79%3A0x6ac2dbd8335ca774!2sAv.%20de%20Mayo%20811%2C%20C1084AAD%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1714323104905!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <br>
+        </div>
+        <div class="custom-flex-item">
+          <div class="contact_form">
+            <div class="formulario">      
               <h3>Escríbenos y en breve nos pondremos en contacto contigo</h3>      
-              <form action="#" method="post">                                
-                  <p>
-                      <label for="nombre" class="colocar_nombre">Nombre
-                      <span class="obligatorio">*</span>
-                      </label>
-                      <input type="text" name="introducir_nombre" id="nombre" required="obligatorio" placeholder="Escribe tu nombre">
-                  </p>                   
-                  <p>
-                      <label for="email" class="colocar_email">Email
-                      <span class="obligatorio">*</span>
-                      </label>
-                      <input type="email" name="introducir_email" id="email" required="obligatorio" placeholder="Escribe tu Email">
-                  </p>                
-                  <p>
-                      <label for="telefone" class="colocar_telefono">Teléfono
-                      </label>
-                      <input type="tel" name="introducir_telefono" id="telefono" placeholder="Escribe tu teléfono">
-                  </p>                      
-                  <p>
-                      <label for="website" class="colocar_website">Sitio web
-                      </label>
-                      <input type="url" name="introducir_website" id="website" placeholder="Escribe la URL de tu web">
-                  </p>                        
-                  <p>
-                      <label for="asunto" class="colocar_asunto">Asunto
-                      <span class="obligatorio">*</span>
-                      </label>
-                      <input type="text" name="introducir_asunto" id="assunto" required="obligatorio" placeholder="Escribe un asunto">
-                  </p>                       
-                  
-                      <label for="mensaje" class="colocar_mensaje">Mensaje
-                      <span class="obligatorio">*</span>
-                      </label>   
-                  <p>                  
-                      <textarea name="introducir_mensaje" class="texto_mensaje" id="mensaje" required="obligatorio" placeholder="Deja aquí tu comentario..."
-                      style="width: 400px; height: 100px;"></textarea> 
-                  </p>                                      
-                  <button type="submit" name="enviar_formulario" id="enviar" style="padding: 8px 16px;;background-color: #4CAF50;color: 
-                  white;text-align: center;text-decoration: none;font-size: 16px;border-radius: 5px;border: none;cursor: pointer;
-                  transition: background-color 0.3s;" onmouseover="this.style.backgroundColor='#255226'"onmouseout="this.style.backgroundColor='#4CAF50'">
-                  <p>Enviar</p></button>  
-                  <p class="aviso">
-                      <span class="obligatorio"> * </span>los campos son obligatorios.
-                  </p>                         
-              </form>
-          </div>  
+              <div class="container mt-5">
+                <form action="#" method="post">
+                  <div class="form-group">
+                      <label for="nombre">Nombre <span class="obligatorio">*</span></label>
+                      <input type="text" class="form-control" name="nombre" id="nombre" required placeholder="Escribe tu nombre">
+                  </div>
+                  <div class="form-group">
+                      <label for="email">Email <span class="obligatorio">*</span></label>
+                      <input type="email" class="form-control" name="email" id="email" required placeholder="Escribe tu Email">
+                  </div>
+                  <div class="form-group">
+                      <label for="telefono">Teléfono</label>
+                      <input type="tel" class="form-control" name="telefono" id="telefono" placeholder="Escribe tu teléfono">
+                  </div>
+                  <div class="form-group">
+                      <label for="website">Sitio web</label>
+                      <input type="url" class="form-control" name="url" id="website" placeholder="Escribe la URL de tu web">
+                  </div>
+                  <div class="form-group">
+                      <label for="asunto">Asunto <span class="obligatorio">*</span></label>
+                      <input type="text" class="form-control" name="asunto" id="asunto" required placeholder="Escribe un asunto">
+                  </div>
+                  <div class="form-group">
+                      <label for="mensaje">Mensaje <span class="obligatorio">*</span></label>
+                      <textarea name="mensaje" class="form-control" id="mensaje" required placeholder="Deja aquí tu comentario..." rows="4"></textarea>
+                  </div>
+                  <button type="submit" class="btn btn-success">Enviar</button>
+                  <p class="mt-3">
+                      <span class="obligatorio">*</span> los campos son obligatorios.
+                  </p>
+                </form>
+              </div>
+            </div>  
+          </div>
         </div>
       </div>
+      <div class="text-center">
+        <h1>O sino comunicate por whatsapp</h1>
+        <a href="https://wa.me/+5491134298740/?text=tu%20texto%20personalizado" target="_blank"><img src="../media\whatsapp.png" width="5%"></a>
+        <br><br>
       </div>
-      <h1>O sino comunicate por whatsapp</h1>
-      <a href="https://wa.me/+5491134298740/?text=tu%20texto%20personalizado" target="_blank"><img src="../media\whatsapp.png" width="5%"></a>
-      <br><br>
     </section>
   </main>
 
