--- a/contacto.html
+++ b/contacto.html
@@ -44,11 +44,11 @@
               <div class="container mt-5">
                 <form action="#" method="post">
                   <div class="form-group">
-                      <label for="nombre">Nombre <span class="obligatorio">*</span></label>
+                      <label for="nombre"><span class="obligatorio">Nombre*</span></label>
                       <input type="text" class="form-control" name="nombre" id="nombre" required placeholder="Escribe tu nombre">
                   </div>
                   <div class="form-group">
-                      <label for="email">Email <span class="obligatorio">*</span></label>
+                      <label for="email"><span class="obligatorio">Email*</span></label>
                       <input type="email" class="form-control" name="email" id="email" required placeholder="Escribe tu Email">
                   </div>
                   <div class="form-group">
@@ -60,7 +60,7 @@
                       <input type="url" class="form-control" name="url" id="website" placeholder="Escribe la URL de tu web">
                   </div>
                   <div class="form-group">
-                      <label for="asunto">Asunto <span class="obligatorio">*</span></label>
+                      <label for="asunto"><span class="obligatorio">Asunto *</span></label>
                       <input type="text" class="form-control" name="asunto" id="asunto" required placeholder="Escribe un asunto">
                   </div>
                   <div class="form-group">
@@ -77,9 +77,12 @@
           </div>
         </div>
       </div>
+      <br><br>
       <div class="text-center">
-        <h1>O sino comunicate por whatsapp</h1>
-        <a href="https://wa.me/+5491134298740/?text=tu%20texto%20personalizado" target="_blank"><img src="../media\whatsapp.png" width="5%"></a>
+        <h3>O sino comunicate por whatsapp</h3>
+        <br>
+        <a href="https://wa.me/+5491134298740/?text=tu%20texto%20personalizado" target="_blank"><img src="/img\whatsapp.png" width="5%"></a>
+        <br><br>
         <br><br>
       </div>
     </section>
