--- a/contacto.html
+++ b/contacto.html
@@ -16,7 +16,7 @@
 <body>
   <header>
 
-    <iframe src="partials/navbar.html" style="width: 100%; height: 100px; border: none;"></iframe>
+    <iframe src="partials/navbar.html" class="navbar-partial"></iframe>
 
   </header>
 
@@ -25,21 +25,21 @@
       <i class="fas fa-angle-double-up"></i>
     </a>
 
-    <section class="custom-margin">
+    <section class="margen-pagina">
       <div class="banner text-center p-3">
         <h2>Contactanos</h2>
       </div>
       <br><br>
-      <div class="custom-flex-container">
-        <div class="custom-flex-item">
+      <div class="container-2-bloques">
+        <div class="bloque">
           <h3>Capital Federal</h3>
           <br>
           <p>Horarios de atencion : Lunes a Viernes de 10 a 18Hs</p>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.822235586908!2d-58.380524223392!3d-34.60865635776064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccad18308bb79%3A0x6ac2dbd8335ca774!2sAv.%20de%20Mayo%20811%2C%20C1084AAD%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1714323104905!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.822235586908!2d-58.380524223392!3d-34.60865635776064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccad18308bb79%3A0x6ac2dbd8335ca774!2sAv.%20de%20Mayo%20811%2C%20C1084AAD%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1714323104905!5m2!1ses!2sar" class="iframe-maps" width= "600" height= "450" allowfullscreen: loading="lazy" referrerpolicy="no-referrer-when-downgrade" ></iframe>
           <br>
         </div>
-        <div class="custom-flex-item">
-          <div class="contact_form">
+        <div class="bloque">
+          <div class="form-contacto">
             <div class="formulario">      
               <h3>Escríbenos y en breve nos pondremos en contacto contigo</h3>      
               <div class="container mt-5">
