--- a/contacto.html
+++ b/contacto.html
@@ -47,27 +47,27 @@
               <div class="container mt-5">
                 <form action="#" method="post">
                   <div class="form-group">
-                      <label for="nombre"><span class="obligatorio">Nombre*</span></label>
+                      <label for="nombre"><span class="blanco">Nombre*</span></label>
                       <input type="text" class="form-control" name="nombre" id="nombre" required placeholder="Escribe tu nombre">
                   </div>
                   <div class="form-group">
-                      <label for="email"><span class="obligatorio">Email*</span></label>
+                      <label for="email"><span class="blanco">Email*</span></label>
                       <input type="email" class="form-control" name="email" id="email" required placeholder="Escribe tu Email">
                   </div>
                   <div class="form-group">
-                      <label for="telefono">Teléfono</label>
+                      <label for="telefono"><span class="blanco">Teléfono</span></label>
                       <input type="tel" class="form-control" name="telefono" id="telefono" placeholder="Escribe tu teléfono">
                   </div>
                   <div class="form-group">
-                      <label for="website">Sitio web</label>
+                      <label for="website"><span class="blanco">Sitio web</span></label>
                       <input type="url" class="form-control" name="url" id="website" placeholder="Escribe la URL de tu web">
                   </div>
                   <div class="form-group">
-                      <label for="asunto"><span class="obligatorio">Asunto *</span></label>
+                      <label for="asunto"><span class="blanco">Asunto *</span></label>
                       <input type="text" class="form-control" name="asunto" id="asunto" required placeholder="Escribe un asunto">
                   </div>
                   <div class="form-group">
-                      <label for="mensaje">Mensaje <span class="obligatorio">*</span></label>
+                      <label for="mensaje"><span class="blanco">Mensaje*</span></label>
                       <textarea name="mensaje" class="form-control" id="mensaje" required placeholder="Deja aquí tu comentario..." rows="4"></textarea>
                   </div>
                   <button type="submit" class="btn btn-success">Enviar</button>
